--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, ESSAppActivity!</string>
-    <string name="app_name">ESSApp</string>
+    
+	<!-- Application -->
+    <string name="app_name">WASTL Mobile</string>
+    
 </resources>
