--- a/README
+++ b/README
@@ -4,6 +4,6 @@ Platform: Android 2.2 (API 8)
 Description: WASTL Mobile is a free service to retrieve information about currently employing fire departments in Lower Austria.
 
 ToDos:
-	- Rewrite database connection
+	- Rewrite database connection - in process
 	- Seperate eventlistener into more classes for each activity
 	- Bugfixing
