New design, rewrote main activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
     
 	<!-- Application -->
     <string name="app_name">WASTL Mobile</string>
+    <string name="logo">Image</string>
     
 </resources>
