Combined listview, added event listener for mission

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,7 @@
     <!-- Database -->
     <string name="create_database">Datenbank wird erstellt</string>
     
+    <!-- Mission -->
+    <string name="mission_title">Aktuelle Einsätze</string>
+    
 </resources>
